tdf#146260: Add more mapping rules on character encoding

Change-Id: I0f6f3abf96312132fbb1cfaaf1ee53a60710cdd2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146223
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>